--- a/index.html
+++ b/index.html
@@ -8,53 +8,64 @@
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start; /* Aligné en haut */
       height: 100vh;
       margin: 0;
       background-color: #121212;
       color: #f1f1f1;
+      padding-top: 40px; /* Décalage depuis le haut */
     }
     .container {
       text-align: center;
       background-color: #1e1e1e;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.6);
-      width: 400px;
+      padding: 40px;
+      border-radius: 14px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.6);
+      width: 600px;
       max-width: 90%;
+    }
+    h2 {
+      font-size: 28px;
+      margin-bottom: 15px;
+    }
+    p {
+      font-size: 18px;
+      margin-bottom: 15px;
     }
     textarea {
       width: 100%;
-      height: 100px;
-      margin-bottom: 15px;
-      border-radius: 8px;
+      height: 120px;
+      margin-bottom: 20px;
+      border-radius: 10px;
       border: 1px solid #333;
       background-color: #2a2a2a;
       color: #f1f1f1;
-      padding: 10px;
+      padding: 12px;
+      font-size: 18px;
       resize: none;
     }
     button {
-      padding: 10px 20px;
-      border-radius: 8px;
+      padding: 12px 24px;
+      border-radius: 10px;
       border: none;
       background: #4CAF50;
       color: white;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 18px;
       transition: background 0.3s ease;
     }
     button:hover {
       background: #45a049;
     }
     .result {
-      margin-top: 15px;
-      padding: 12px;
-      border-radius: 8px;
+      margin-top: 20px;
+      padding: 14px;
+      border-radius: 10px;
       background: #2a2a2a;
       border: 1px solid #333;
-      min-height: 40px;
+      min-height: 50px;
       word-wrap: break-word;
+      font-size: 18px;
     }
   </style>
 </head>
